Bug 253300 - Untranslatable messages for po/ts/doc files on Information tab of Properties dialog
Summary: Untranslatable messages for po/ts/doc files on Information tab of Properties ...
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-05 12:00 UTC by Burkhard Lück
Modified: 2010-10-19 16:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2010-10-05 12:00:58 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In trunk and branch the Information tab of the kfile Properties dialog has untranslated messages for these file types:

1) gettext po files (kdesdk/strigi-analyzer/po):
"translation.total", "translation.translated", "translation.untranslated", "translation.fuzzy", "translation.last_translator", "translation.translation_date", "translation.source_date"

2) Qt ts files (kdesdk/strigi-analyzer/ts):
"translation.total", "translation.translated", "translation.untranslated", "translation.obsolete"

3) doc files (application/msword):
"Keyword", "Subject"

To make these messages translatable they could be added to kdelibs/kio/kfile/knfotranslator.cpp, so they are extracted to kio4.pot.
But to be honest, these strings don't belong to kio4.po, they should e. g. be in kiofile_po.pot

Reproducible: Always

Steps to Reproduce:
KDE_LANG=x-test dolphin
view properties of po/ts/doc files to see the untranlatable messages.
Comment 1 Peter Penz 2010-10-19 16:45:22 UTC
SVN commit 1187465 by ppenz:

Add missing translations

BUG: 253300
FIXED-IN: 4.6.0


 M  +11 -0     knfotranslator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187465