Add missing translations

BUG: 253300
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdelibs/; revision=1187465